<resources>
    <string name="app_name">Horarios Rmtc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Buscar ponto</string>
    <string name="search_label">Pontos de ônibus</string>
    <string name="action_search">Pesquisa</string>

    <string name="feedback_no_network">
        Não foi possível pesquisar. Verifique a sua conexão de rede e tente novamente.
    </string>

    <string name="feedback_searching_bus_stop">
        Buscando ponto de ônibus…
    </string>

    <string name="feedback_searching_arrival_prediction">
        Buscando horário da próxima viagem…
    </string>
    <string name="feedback_no_arrival_prediction">
        Não há viagem programada para esta linha.
    </string>
    <string name="feedback_searching_nearby_bus_stop">
        Buscando pontos de ônibus próximos à você…
    </string>
    <string name="next_travel">PRÓXIMA VIAGEM</string>
    <string name="available_bus_lines">LINHAS DISPONÍVEIS</string>

    <string name="line_number_example">280</string>
    <string name="line_itinerary_example">Vale dos Sonhos / Guanabara / Centro</string>

    <string name="next_travel_label">PRÓXIMO</string>
    <string name="next_bus_number_example">50612</string>
    <string name="next_expected_arrival_time_example">às 17:32</string>
    <string name="next_timelapse_example">faltam 23 min 40 seg</string>

    <string name="following_travel_label">SEGUINTE</string>
    <string name="following_bus_number_example">99263</string>
    <string name="following_expected_arrival_time_example">às 18:02</string>
    <string name="following_timelapse_example">faltam 50 min 25 seg</string>

    <string name="bus_number">Ônibus número %1$s</string>
    <string name="expected_arrival_time">às %1$s</string>
    <string name="countdown_in_hours">faltam %1$02d h %2$02d min %3$02d seg</string>
    <string name="countdown_in_minutes">faltam %1$02d min %2$02d seg</string>
    <string name="countdown_fewer_than_minute">falta menos de 1 minuto</string>
    <string name="bus_has_arrived">SEU ÔNIBUS CHEGOU!</string>

    <string name="bus_stop_id_example">3357</string>
    <string name="bus_stop_address">Interna Do Campus, Area Da Ufg - Goiania</string>

    <string name="bus_terminal_id_example">31801</string>
    <string name="bus_terminal_address_example">Terminal Neropolis,  - Neropolis</string>
    <string name="title_activity_bus_terminal">Terminais</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle_nearby_bus_stops">Pontos próximos à você</string>
    <string name="title_bus_stop">Ponto próximo %s</string>
    <string name="subtitle_arrival_prediction">Próxima viagem</string>
    <string name="title_bus_stop_lines">Ponto %s</string>
    <string name="title_terminals">Terminais</string>
</resources>
