<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_arrival_prediction"
    >

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/next_travel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_travel_24dp"
        android:drawableStart="@drawable/ic_travel_24dp"
        android:drawablePadding="32dp"
        android:text="@string/next_travel_label"
        tools:drawableTint="?attr/colorPrimary"
        tools:drawableTintMode="src_over"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/next_bus_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_info_24dp"
        android:drawableStart="@drawable/ic_info_24dp"
        android:drawablePadding="32dp"
        tools:text="@string/next_bus_number_example"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/next_expected_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_schedule_24dp"
        android:drawableStart="@drawable/ic_schedule_24dp"
        android:drawablePadding="32dp"
        tools:text="@string/next_expected_arrival_time_example"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/next_countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_timelapse_24dp"
        android:drawableStart="@drawable/ic_timelapse_24dp"
        android:drawablePadding="32dp"
        tools:text="@string/next_timelapse_example"
        />

</LinearLayout>