<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_arrival_prediction"
    >

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/following_travel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?attr/colorAccent"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_travel_24dp"
        android:drawableStart="@drawable/ic_travel_24dp"
        android:drawablePadding="32dp"
        android:text="@string/following_travel_label"
        app:typeface="roboto_slab_light"
        tools:drawableTint="?attr/colorAccent"
        tools:drawableTintMode="src_over"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/following_bus_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_info_24dp"
        android:drawableStart="@drawable/ic_info_24dp"
        android:drawablePadding="32dp"
        app:typeface="roboto_slab_light"
        tools:text="@string/following_bus_number_example"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/following_expected_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_schedule_24dp"
        android:drawableStart="@drawable/ic_schedule_24dp"
        android:drawablePadding="32dp"
        app:typeface="roboto_slab_light"
        tools:text="@string/following_expected_arrival_time_example"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/following_countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_timelapse_24dp"
        android:drawableStart="@drawable/ic_timelapse_24dp"
        android:drawablePadding="32dp"
        app:typeface="roboto_slab_light"
        tools:text="@string/following_timelapse_example"
        />

</LinearLayout>