<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        style="@style/Widget.HorariosRmtc.CardView"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/bus_stop_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    tools:text="@string/bus_stop_id_example"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/bus_stop_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:text="@string/bus_stop_address"
                    />

            </LinearLayout>

            <com.devspark.robototextview.widget.RobotoButton
                style="@style/Widget.HorariosRmtc.Button"
                android:id="@+id/available_lines"
                android:layout_below="@id/content"
                android:layout_centerHorizontal="true"
                android:text="@string/available_bus_lines"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>